--- a/OppenGL/OppenGL.vcxproj
+++ b/OppenGL/OppenGL.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chess_piece.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
