--- a/OppenGL/OppenGL.vcxproj.filters
+++ b/OppenGL/OppenGL.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="stb_image.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
+    <ClInclude Include="chess_piece.h">
+      <Filter>Файлы ресурсов</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment.glsl" />
